⚡️ pref: create absolute path with jsconfig and handle eslint

--- a/package.json
+++ b/package.json
@@ -14,7 +14,22 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "settings": {
+      "import/resolver": {
+        "node": {
+          "paths": [
+            "src"
+          ],
+          "extensions": [
+            ".js",
+            ".jsx",
+            ".ts",
+            ".tsx"
+          ]
+        }
+      }
+    }
   },
   "lint-staged": {
     "*.{css, scss, sass}": "stylelint",
