--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "gsap": "^3.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-jss": "^10.9.2",
     "react-scripts": "5.0.1",
     "transition-style": "^0.1.3",
     "web-vitals": "^2.1.0"
